Add rest endpoints for encoding and submitting transactions Add rest tests Add node tests
