# packages/mainnet-cash/api/openapi.yaml
@@ -784,6 +784,61 @@ paths:
       tags:
       - wallet
       x-eov-operation-handler: controllers/WalletController
+  /wallet/encode_transaction:
+    post:
+      operationId: encodeTransaction
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SendRequest'
+        description: encode a transaction
+        required: true
+      responses:
+        "202":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EncodeTransactionResponse'
+          description: transaction accepted
+        "400":
+          content: {}
+          description: Invalid Request
+        "418":
+          content: {}
+          description: Invalid network for given address
+      summary: Encode and sign a transaction given a list of sendRequests, options
+        and estimate fees
+      tags:
+      - wallet
+      x-eov-operation-handler: controllers/WalletController
+  /wallet/submit_transaction:
+    post:
+      operationId: submitTransaction
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SubmitTransactionRequest'
+        description: submit an encoded and signed transaction to the network
+        required: true
+      responses:
+        "202":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SubmitTransactionResponse'
+          description: transaction accepted
+        "400":
+          content: {}
+          description: Invalid Request
+        "418":
+          content: {}
+          description: Invalid network for given address
+      summary: submit an encoded and signed transaction to the network
+      tags:
+      - wallet
+      x-eov-operation-handler: controllers/WalletController
   /wallet/utxo:
     post:
       operationId: utxos
@@ -2936,6 +2991,48 @@ components:
         - $ref: '#/components/schemas/SendRequestItem'
         - $ref: '#/components/schemas/OpReturnData'
       type: array
+    EncodeTransactionResponse:
+      example:
+        transactionHex: transactionHex
+      properties:
+        transactionHex:
+          description: encoded transaction in hex format
+          type: string
+      required:
+      - transactionHex
+      type: object
+    SubmitTransactionRequest:
+      example:
+        walletId: wif:mainnet:L1TnU2zbNaAqMoVh65Cyvmcjzbrj41Gs9iTLcWbpJCMynXuap6UN
+        awaitPropagation: true
+        transactionHex: transactionHex
+      properties:
+        walletId:
+          example: wif:mainnet:L1TnU2zbNaAqMoVh65Cyvmcjzbrj41Gs9iTLcWbpJCMynXuap6UN
+          type: string
+        transactionHex:
+          description: encoded transaction in hex format
+          type: string
+        awaitPropagation:
+          default: true
+          description: A boolean flag to wait for transaction to propagate through
+            the network and be registered in the bitcoind and indexer. If set to false,
+            the `send` call will be very fast, but the wallet UTXO state might be
+            invalid for some 500ms.
+          type: boolean
+      required:
+      - transactionHex
+      - walletId
+      type: object
+    SubmitTransactionResponse:
+      example:
+        txId: 1e6442a0d3548bb4f917721184ac1cb163ddf324e2c09f55c46ff0ba521cb89f
+      properties:
+        txId:
+          description: The hash of a transaction
+          example: 1e6442a0d3548bb4f917721184ac1cb163ddf324e2c09f55c46ff0ba521cb89f
+          type: string
+      type: object
     CashscriptReceiptArray:
       items:
         $ref: '#/components/schemas/CashscriptReceipt'
